<?xml version="1.0"?>
<package format="3">
  <name>human_mapping</name>
  <version>0.0.1</version>
  <description>ZED fused skeleton to G1 upper-body commands and human colliders.</description>

  <maintainer email="john.abanes@nyu.edu">John Abanes</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>g1_cbf_msg</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>zed_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
