<?xml version="1.0"?>
<package format="3">
  <name>zed_launcher</name>
  <version>0.0.1</version>
  <description>Minimal launch package for starting the ZED Box Mini stream server.</description>

  <maintainer email="john.abanes@nyu.edu">John Abanes</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>zed_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_plugin_zed_od</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
